--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "devDependencies": {
     "@tauri-apps/cli": "^2.0.0-rc.3",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-full-reload": "^1.2.0"
   }
 }
